kubernetes/local/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app-deployment
spec:
  selector:
    matchLabels:
      app: app
  replicas: 2
  template:
    metadata:
      labels:
        app: app
    spec:      
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
        - name: tiulanches
          image: luisferrarezi/tiulanches:v24.02.27
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1.0"
          ports:
            - containerPort: 8080
              name: app-port
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: app-port
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: app-port
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080       
      nodePort: 31200
  type: NodePort
