kubernetes/local/tiulanches-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiulanches-deployment
  labels:
    app: tiulanches-deployment
spec:
  selector:
    matchLabels:
      app: tiulanches
  replicas: 1
  template:
    metadata:
      labels:
        app: tiulanches
    spec:      
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
        - name: tiulanches
          image: luisferrarezi/tiulanches:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1.0"
          ports:
            - containerPort: 8080
              name: tiulanches-port
---
apiVersion: v1
kind: Service
metadata:
  name: tiulanches-svc
spec:
  selector:
    app: tiulanches
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiulanches-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /produtos
        backend:
          service:
            name: tiulanches-svc
            port: 
              number: 80
      - pathType: Prefix
        path: /clientes
        backend:
          service:
            name: tiulanches-svc
            port: 
              number: 80
